--- a/plugin.xml
+++ b/plugin.xml
@@ -21,8 +21,8 @@
   <preference name="APP_PATH" default="/" />
 
   <platform name="android">
-    <!-- hook type="after_plugin_install" src="scripts/crashlytics/android/after_plugin_install.js" / -->
-    <!-- hook type="before_plugin_uninstall" src="scripts/crashlytics/android/before_plugin_uninstall.js" / -->
+    <!-- hook type="after_plugin_install" src="scripts/crashlytics/android/after_plugin_install.js" /> -->
+    <!-- hook type="before_plugin_uninstall" src="scripts/crashlytics/android/before_plugin_uninstall.js" /> -->
     <hook type="before_plugin_install" src="scripts/configurations/unzipAndCopySound.js" />
 
     <config-file parent="/*" target="res/xml/config.xml">
