--- a/plugin.xml
+++ b/plugin.xml
@@ -59,6 +59,7 @@
     </config-file>
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
       <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="@string/default_notification_channel_id"/>
+      <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
     </config-file>
 
     <resource-file src="google-services.json" target="./google-services.json" />
