--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -32,6 +32,9 @@ dependencies {
   implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
   implementation 'com.google.firebase:firebase-auth:17.0.0'
   implementation 'com.google.firebase:firebase-core:16.0.9'
+  implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+    transitive = true
+  }
 }
 
 cdvPluginPostBuildExtras.add({
